--- a/Transcendence/Transcendence.vcxproj
+++ b/Transcendence/Transcendence.vcxproj
@@ -768,6 +768,9 @@
   <ItemGroup>
     <None Include="Game\Source\Benedict01.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <Xml Include="Game\Source\Benedict.xml" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
