TransData star system snapshots

--- a/Transcendence/TransData/TransData.vcxproj
+++ b/Transcendence/TransData/TransData.vcxproj
@@ -259,6 +259,7 @@
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">MaxSpeed</Optimization>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="SystemImages.cpp" />
     <ClCompile Include="SystemLabelCount.cpp" />
     <ClCompile Include="SystemTest.cpp">
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Disabled</Optimization>
