--- a/Transcendence/TransData/TransData.vcxproj.filters
+++ b/Transcendence/TransData/TransData.vcxproj.filters
@@ -129,6 +129,9 @@
     <ClCompile Include="TopologyMap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SystemImages.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
