--- a/Transcendence/Transcendence.vcxproj
+++ b/Transcendence/Transcendence.vcxproj
@@ -779,6 +779,7 @@
   </ItemGroup>
   <ItemGroup>
     <Xml Include="Game\Source\Benedict.xml" />
+    <Xml Include="Game\Source\Stars.xml" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
