--- a/Transcendence/Transcendence.vcxproj.filters
+++ b/Transcendence/Transcendence.vcxproj.filters
@@ -686,5 +686,8 @@
     <Xml Include="Game\Source\Benedict.xml">
       <Filter>XML Files\Human Space Library</Filter>
     </Xml>
+    <Xml Include="Game\Source\Stars.xml">
+      <Filter>XML Files\Universe Library</Filter>
+    </Xml>
   </ItemGroup>
 </Project>
