--- a/Transcendence/TransData/TransData.vcxproj.filters
+++ b/Transcendence/TransData/TransData.vcxproj.filters
@@ -132,6 +132,9 @@
     <ClCompile Include="SystemImages.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EncounterCount.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h">
