/systemcount command for TransData

--- a/Transcendence/TransData/TransData.vcxproj
+++ b/Transcendence/TransData/TransData.vcxproj
@@ -260,6 +260,7 @@
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">MaxSpeed</Optimization>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="SystemCount.cpp" />
     <ClCompile Include="SystemImages.cpp" />
     <ClCompile Include="SystemLabelCount.cpp" />
     <ClCompile Include="SystemTest.cpp">
