--- a/Transcendence/TransData/TransData.vcxproj
+++ b/Transcendence/TransData/TransData.vcxproj
@@ -194,6 +194,7 @@
     <ClCompile Include="CSimViewer.cpp" />
     <ClCompile Include="Effects.cpp" />
     <ClCompile Include="EncounterCount.cpp" />
+    <ClCompile Include="EncounterFrequency.cpp" />
     <ClCompile Include="EncounterSim.cpp" />
     <ClCompile Include="EncounterTable.cpp" />
     <ClCompile Include="Entities.cpp" />
