--- a/Transcendence/Transcendence.vcxproj
+++ b/Transcendence/Transcendence.vcxproj
@@ -742,7 +742,9 @@
     <None Include="Game\Source\StdPlayerShips.xml">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Game\Source\StdShields.xml" />
+    <None Include="Game\Source\StdShields.xml">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Game\Source\StdSovereigns.xml" />
     <None Include="Game\Source\StdSystems.xml" />
     <None Include="Game\Source\StdTypes.xml">
