Missile definitions on item (instead of launcher)

--- a/Transcendence/TSE/TSE.vcxproj.filters
+++ b/Transcendence/TSE/TSE.vcxproj.filters
@@ -775,5 +775,8 @@
     <ClCompile Include="SFXOrb.cpp">
       <Filter>Source Files\SFX</Filter>
     </ClCompile>
+    <ClCompile Include="CItemCtx.cpp">
+      <Filter>Source Files\Items</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
