--- a/Transcendence/Transcendence.vcxproj
+++ b/Transcendence/Transcendence.vcxproj
@@ -744,7 +744,9 @@
     </None>
     <None Include="Game\Source\StdArmor.xml" />
     <None Include="Game\Source\StdAutons.xml" />
-    <None Include="Game\Source\StdDevices.xml" />
+    <None Include="Game\Source\StdDevices.xml">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Game\Source\StdDockScreens.xml">
       <SubType>Designer</SubType>
     </None>
