--- a/Transcendence/Transcendence.vcxproj
+++ b/Transcendence/Transcendence.vcxproj
@@ -830,6 +830,7 @@
     <None Include="Game\Source\RPGDeviceDockScreens.xml">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Game\Source\RPGCharacterClasses.xml" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
