--- a/Transcendence/Transcendence.vcxproj.filters
+++ b/Transcendence/Transcendence.vcxproj.filters
@@ -734,5 +734,8 @@
     <Xml Include="Game\Source\Benedict.xml">
       <Filter>XML Files\Human Space Library</Filter>
     </Xml>
+    <Xml Include="Game\Source\Ovoids.xml">
+      <Filter>XML Files\Universe Library</Filter>
+    </Xml>
   </ItemGroup>
 </Project>
