Fixes to encounter counts

--- a/Transcendence/Transcendence.vcxproj.filters
+++ b/Transcendence/Transcendence.vcxproj.filters
@@ -724,6 +724,12 @@
     <None Include="Game\Source\RPGDeviceDockScreens.xml">
       <Filter>XML Files\RPG Library</Filter>
     </None>
+    <None Include="Game\Source\Ovoids.xml">
+      <Filter>XML Files\Universe Library</Filter>
+    </None>
+    <None Include="Game\Source\RPGDialog.xml">
+      <Filter>XML Files\RPG Library</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Transcendence.rc">
@@ -733,12 +739,6 @@
   <ItemGroup>
     <Xml Include="Game\Source\Benedict.xml">
       <Filter>XML Files\Human Space Library</Filter>
-    </Xml>
-    <Xml Include="Game\Source\Ovoids.xml">
-      <Filter>XML Files\Universe Library</Filter>
-    </Xml>
-    <Xml Include="Game\Source\RPGDialog.xml">
-      <Filter>XML Files\RPG Library</Filter>
     </Xml>
   </ItemGroup>
 </Project>
