Reduced the gradient in Choose Adventure screen
Trying to prevent color artifacts...

--- a/DirectXUtil/DirectXUtil.vcxproj
+++ b/DirectXUtil/DirectXUtil.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="..\Includes\DirectXUtil.h" />
     <ClInclude Include="..\Includes\Reanimator.h" />
     <ClInclude Include="..\Includes\TextFormat.h" />
+    <ClInclude Include="NoiseImpl.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="16bitBlt.cpp" />
