--- a/DirectXUtil/DirectXUtil.vcxproj.filters
+++ b/DirectXUtil/DirectXUtil.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="..\Includes\TextFormat.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="NoiseImpl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="16bitBlt.cpp">
